cluster/apps/media/openbooks/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: openbooks
  namespace: media
  labels:
    app: openbooks
spec:
  replicas: 1
  selector:
    matchLabels:
      app: openbooks
  template:
    metadata:
      labels:
        app: openbooks
    spec:
      containers:
        - name: openbooks
          image: docker.io/evanbuss/openbooks:latest
          ports:
            - containerPort: 80
          volumeMounts:
            - name: openbooks
              mountPath: /openbooks/books
      volumes:
        - name: openbooks
          persistentVolumeClaim:
            claimName: media-pvc
            subPath: openbooks

---

apiVersion: v1
kind: Service
metadata:
  name: openbooks
  namespace: media
spec:
  ports:
    - name: openbooks
      port: 80
      targetPort: 80
  selector:
    app: openbooks
