cluster/apps/media/openbooks/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: openbooks
  namespace: media
  annotations:
    kubernetes.io/ingress.class: traefik
    kubernetes.io/tls-acme: 'true'
    cert-manager.io/cluster-issuer: ${CONFIG_CERTIFICATE_ISSUER}
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.middlewares: "traefik-system-internal@kubernetescrd"
spec:
  rules:
    - host: &host openbooks.${SECRET_DOMAIN_NAME}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: openbooks
                port:
                  number: 80
  tls:
    - secretName: openbooks-tls
      hosts:
        - *host
